# mba-ds-webscraper

./: README.md  config.toml  pyproject.toml
webscraper/: main.py
webscraper/scrapers/: data_wrangling.py  scraper_8itempregare.py  scraper_geekhunter.py  scraper_programathor.py  scraper_trampos.py  scraper_utils.py  vaga.py
