[tool.poetry]
name = "webscraper"
version = "0.1.0"
description = ""
authors = ["Matheus Pontim <matheus.vp01@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
toml = "^0.10.2"

[tool.poetry.dev-dependencies]
pre-commit = "^2.17.0"
black = "^22.1.0"
autoflake = "^1.4"
isort = "^5.10.1"
[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
start = "webscraper.main:app"

# todas as configurações do projeto vão aqui, acima são apenas as de sistema e do poetry
[app]
