[tool.poetry]
name = "webscraper"
version = "0.1.0"
description = ""
authors = ["Matheus Pontim <matheus.vp01@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
toml = "^0.10.2"
requests = "^2.27.1"
beautifulsoup4 = "^4.10.0"
requests-html = "^0.10.0"

[tool.poetry.dev-dependencies]
pre-commit = "^2.17.0"
black = "^22.1.0"
autoflake = "^1.4"
isort = "^5.10.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
start = "webscraper.main:app"